--- a/index.html
+++ b/index.html
@@ -64,10 +64,12 @@
         </table>
         <table id="guide">
             <tr>
-                <td>Press the arrow keys to move between the tiles. </td>
+                <td>Press the arrow keys to move between the tiles. If you want to change tiles, press Ctrl and an arrow key at the same time.</td>
             </tr>
             <tr>
-                <td>If you want to change tiles, press Ctrl and an arrow key at the same time.</td>
+                <td>
+                    You have 5 minutes, and you may change max 200 times.
+                </td>
             </tr>
             <tr>
                 <td> Enjoy!</td>
